# learnopengl

./: .gitignore  CMakeLists.txt  README.md  functions.cmake
external_libs/: CMakeLists.txt
external_libs/glad/: CMakeLists.txt
external_libs/glad/include/glad/: glad.h
external_libs/glad/src/: glad.c
libs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/include/: Wrapper.h  helpers.h
src/libs/: CMakeLists.txt
src/libs/camera_lib/: CMakeLists.txt
src/libs/camera_lib/include/: camera.h
src/libs/learnopengl_helpers/: CMakeLists.txt
src/libs/learnopengl_helpers/include/: Point.hpp  Shape.h  Wrapper.h  callbacks.h  helpers.h
src/libs/learnopengl_helpers/src/: Shape.cpp  Wrapper.cpp  helpers.cpp
src/libs/shaders_lib/: CMakeLists.txt
src/libs/shaders_lib/include/: Shaders.h
src/libs/shaders_lib/src/: Shader.cpp
src/mains/: CMakeLists.txt
src/mains/camera/: CMakeLists.txt  camera.cpp
src/mains/camera/exercises/: CMakeLists.txt  camera_ex1.cpp
src/mains/coordinates/: CMakeLists.txt
src/mains/coordinates/exercises/: CMakeLists.txt  coordinates_ex2.cpp  coordinates_ex3.cpp
src/mains/experiments/: CMakeLists.txt  experiments.cpp
src/mains/experiments/rotating_cubes/: CMakeLists.txt  fragment_shader.fsh  rotating_blue_cube.cpp  rotating_cubes.cpp  rotating_logo_cube.cpp
src/mains/experiments/rotating_cubes/challenge_cubes/: CMakeLists.txt  fragment_shader.fsh  rotating_challenge_cubes.cpp
src/mains/experiments/rotating_cubes/traffic_lights/: CMakeLists.txt  traffic_lights.cpp
src/mains/getting_started/: CMakeLists.txt
src/mains/getting_started/coordinates/: coordinates.cpp
src/mains/getting_started/coordinates/exercises/: CMakeLists.txt  coordinates_ex1.cpp
src/mains/getting_started/hello_triangle/: CMakeLists.txt  hello_triangle.cpp
src/mains/getting_started/shaders/exercises/: 3_vertex_out_fragment_in.cpp  CMakeLists.txt
src/mains/getting_started/textures/: textures.cpp
src/mains/getting_started/textures/exercises/: textures_exc1.cpp
src/mains/getting_started/transformations/: transformations.cpp
src/mains/getting_started/transformations/exercises/: transformations_ex1.cpp  transformations_ex2.cpp
src/mains/hello_triangle/: CMakeLists.txt  hello_triangle.cpp
src/mains/lighting/: CMakeLists.txt
src/mains/lighting/basic_lighting/: CMakeLists.txt  basic_lighting.cpp
src/mains/lighting/basic_lighting/exercises/: CMakeLists.txt  bl_ex1.cpp  bl_ex3.cpp  bl_ex4.cpp
src/mains/lighting/colors/: CMakeLists.txt  colors.cpp
src/mains/lighting/lighting_maps/: CMakeLists.txt  lighting_maps.cpp
src/mains/lighting/lighting_maps/exercises/: CMakeLists.txt  lighting_maps_ex4.cpp
src/mains/lighting/materials/: CMakeLists.txt  materials.cpp
src/mains/lighting/materials/exercises/: CMakeLists.txt  materials_ex1.cpp  materials_ex2.cpp
src/mains/shaders/: CMakeLists.txt  shaders.cpp  shaders_attributes.cpp  shaders_uniform_lib.cpp  shaders_using_lib.cpp
src/mains/shaders/exercises/: 1_turn_triangle_down.cpp  2_horizontal_offset.cpp  CMakeLists.txt
src/mains/textures/: CMakeLists.txt  textures.cpp
src/mains/textures/exercises/: CMakeLists.txt  textures_exc2.cpp  textures_exc3.cpp
src/mains/transformations/: CMakeLists.txt
src/mains/transformations/exercises/: CMakeLists.txt
src/shaders/basic_lighting/: basic_lighting.fsh  basic_lighting.vsh
src/shaders/basic_lighting/exercises/ex3/: basic_lighting.fsh  basic_lighting.vsh
src/shaders/lighting_maps/: lighting_maps.fsh
src/shaders/lighting_maps/exercises/ex4/: lighting_maps.fsh
src/shaders/materials/: materials.fsh
src/shaders/shaders/exercises/: vertex1.vsh  vertex2.vsh  vertex3.vsh
src/shaders/textures/: texture_fsh.fsh
src/shaders/textures/exercises/: texture_ex1_fsh.fsh  texture_ex3_fsh.fsh
src/src/: Wrapper.cpp  callbacks.cpp  helpers.cpp
